--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,3 @@
-cargo-features = ["edition", "rename-dependency"]
-
 [package]
 name = "bpb"
 description = "boats's personal barricade"
@@ -10,19 +8,19 @@ edition = "2018"
 authors = ["Without Boats <boats@mozilla.com>"]
 
 [dependencies]
-toml = "0.4.6"
-rand = "0.5.4"
-sha2 = "0.7.1"
-serde_derive = "1.0.70"
-serde = "1.0.70"
-hex = "0.3.2"
-failure = "0.1.1"
+toml = "0.5"
+rand = "0.6"
+sha2 = "0.8"
+serde_derive = "1"
+serde = "1"
+hex = "0.4"
+failure = "0.1"
 
 [dependencies.pbp]
 version = "0.4.0"
+git = "https://github.com/tyrchen/pbp"
+branch = "feature/make-project-up-to-date"
 features = ["dalek"]
 
 [dependencies.ed25519-dalek]
-# [dependencies.ed25519]
-# package = "ed25519-dalek"
-version = "0.7.0"
+version = "0.9"
