--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,23 @@
 [package]
 name = "bpb"
-description = "boats's personal barricade"
-license = "MIT OR Apache-2.0"
 version = "1.2.0"
-repository = "https://github.com/withoutboats/bpb"
-edition = "2018"
 authors = ["Without Boats <boats@mozilla.com>"]
+edition = "2018"
+description = "boats's personal barricade"
+repository = "https://github.com/withoutboats/bpb"
+license = "MIT OR Apache-2.0"
+categories = ["authentication", "command-line-utilities"]
+publish = false
 
 [dependencies]
-toml = "0.5"
-rand = "0.6"
-sha2 = "0.8"
-serde_derive = "1"
-serde = "1"
-hex = "0.4"
 failure = "0.1"
+hex = "0.4"
+rand = "0.6"
+serde = "1"
+serde_derive = "1"
+sha2 = "0.8"
 shlex = "1"
+toml = "0.5"
 
 [dependencies.pbp]
 version = "0.4.0"
