Fix bpb_keys detection on Windows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ categories = ["authentication", "command-line-utilities"]
 publish = false
 
 [dependencies]
+dirs = "4"
 failure = "0.1"
 hex = "0.4"
 rand = "0.6"
